--- a/pom.xml
+++ b/pom.xml
@@ -307,6 +307,12 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.6</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.github.pagehelper</groupId>
+			<artifactId>pagehelper</artifactId>
+			<version>5.1.11</version>
+		</dependency>
 				
 	</dependencies>
 </project>
